--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>My first Three.js app</title>
-    <style>canvas { width: 100%; height: 100% }</style>
+    <title>three.js canvas - particles - random</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <style>
+      body {
+        background-color: #000000;
+        margin: 0px;
+        overflow: hidden;
+      }
+
+      a {
+        color:#0078ff;
+      }
+    </style>
   </head>
   <body>
     <script src="build/index.js"></script>
